Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-38986

The eventFilter function gets QKeyEvent twice for a single keypress with ShortcutOverride event.

XMLWordPrintable

    • d7ca800a87a2291c94c6580f0cfe068bb2280caf

      Run the test program from eventfiltertest_v1.zip archive. Press 'x' key once. See the below output with the single key press.

      QEvent::ShortcutOverride event is filtered. 
      DraftMainWindow object is being filtered. 
      88 key was pressed. 
      QEvent::ShortcutOverride event is filtered. 
      DraftMainWindow object is being filtered. 
      88 key was pressed. 
      

        1. eventfiltertest_v1.zip
          5 kB
          Leonard Lee
        2. qtbug38986_override_stacktrace_1.txt
          9 kB
          Friedemann Kleint
        3. qtbug38986_override_stacktrace_2.txt
          10 kB
          Friedemann Kleint
        4. qtbug38986.zip
          2 kB
          Friedemann Kleint
        For Gerrit Dashboard: QTBUG-38986
        # Subject Branch Project Status CR V

            frederik Frederik Gladhorn
            leonlee Leonard Lee
            Votes:
            1 Vote for this issue
            Watchers:
            11 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes